# n2kconvert

./: CMakeLists.txt  LICENSE  README.md  build.sh  runbuild.sh
config/: conffiles  gpstimesync.service  init.d-n2kconvert  kplex.conf  kplex.service  logrotate.d-kplex  n2kconvert-fifos.service  n2kconvert.conf  n2kconvert.service  postinst
src/: N2kConvert.cpp  N2kDataToNMEA0183.cpp  N2kDataToNMEA0183.h  Options.cpp  Options.h  main.cpp
test/: candumpSample1.txt  cantact.py  nmeaLog.txt  serialTest.py  serialfile.txt
